# human-chat-completions

./: .gitignore  README.md  README_en.md  api_server copy.py  localip.py  pyproject.toml  test.py
.github/workflows/: release.yml
inno-setup/: setup.iss
src/: __version__.py  main.py
src/model/: api_model.py  api_server.py  build_response.py  check_update.py  copilot.py  parse_request.py  user_data.py
src/view/: chat.py  console.py  settings.py
